Fix site search form on firefox

--- a/koreanhandbook/scss/partials/_content.scss
+++ b/koreanhandbook/scss/partials/_content.scss
@@ -23,7 +23,6 @@ main {
 }
 
 .input__search {
-  width: 100%;
   font-family: 'Nunito Sans', sans-serif;
   font-size: $input-size;
   font-weight: $input-weight;
