--- a/koreanhandbook/scss/partials/_korean-clock.scss
+++ b/koreanhandbook/scss/partials/_korean-clock.scss
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  animation: fadeIn 1s ease-in-out; 
+  animation: fadeIn 0.25s ease-in-out; 
   border-radius: 2em;
   padding: 0.5em 1em;
   backface-visibility: hidden;
