--- a/koreanhandbook/scss/partials/_media-queries.scss
+++ b/koreanhandbook/scss/partials/_media-queries.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 55em) {
+@media screen and (max-width: 58em) {
   html body {
     .nav {
       background: $dark;
@@ -24,7 +24,7 @@
   }
 }
 
-@media screen and (min-width: 55em) {
+@media screen and (min-width: 58em) {
   html body {
     .overlay {
       display: none;
@@ -37,7 +37,7 @@
   }
 }
 
-@media screen and (min-width: 55.01em ) and (max-width: 80em) {
+@media screen and (min-width: 58.01em ) and (max-width: 80em) {
   html body {
     main {
       .grid {
