--- a/koreanhandbook/static/css/main.css
+++ b/koreanhandbook/static/css/main.css
@@ -225,7 +225,6 @@ main {
     max-width: 8em; }
 
 .input__search {
-  width: 100%;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 1em;
   font-weight: 600;
@@ -552,7 +551,7 @@ a {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  animation: fadeIn 1s ease-in-out;
+  animation: fadeIn 0.25s ease-in-out;
   border-radius: 2em;
   padding: 0.5em 1em;
   backface-visibility: hidden;
@@ -926,7 +925,7 @@ footer {
     padding: 0;
     flex-direction: row;
     justify-content: space-around; } }
-@media screen and (max-width: 55em) {
+@media screen and (max-width: 58em) {
   html body .nav {
     background: #333;
     position: fixed;
@@ -945,12 +944,12 @@ footer {
     padding-top: 4em; }
     html body main .grid {
       grid-template-columns: repeat(1, 1fr); } }
-@media screen and (min-width: 55em) {
+@media screen and (min-width: 58em) {
   html body .overlay {
     display: none; }
   html body .nav .nav__content--mobile {
     display: none; } }
-@media screen and (min-width: 55.01em) and (max-width: 80em) {
+@media screen and (min-width: 58.01em) and (max-width: 80em) {
   html body main .grid {
     grid-template-columns: repeat(2, 1fr); } }
 /*
